   - FEATURE: core::context: allow to pass Code, ARRAY or HASH as Argument to set Command
   - FEATURE: core::global: repository Attribute to store default Briks repository
   - FEATURE: autoupdate: with with brik::tool from Repository
   - FEATURE: pod: most of the documentation is written
   - UPDATE: Metabrik: only core::* Briks now, all others moved to Repository
   - UPDATE: Metabrik: brik_preinit, brik_init and brik_fini are now official Commands
   - new: Metabrik: brik_help_run_undef_arg, brik_help_run_invalid_arg, brik_help_run_empty_array_arg, brik_help_run_file_not_found and brik_help_run_directory_not_found Commands
   - new: perl::module: use_test Attribute to activate test on module installation
   - update: perl::module: install correctly supports ARRAY of modules to install
   - bugfix: shell::rc, shell::script: add a trailing whitespace on multilines

1.11 Sun Nov 22 17:46:43 CET 2015
   - FEATURE: core::shell: auto prefix by run if entered command is a used Brik
              example:          perl::module install Class::Gomor
              is equivalent to: run perl::module install Class::Gomor
   - FEATURE: Metabrik: brik_author and brik_license Commands and Properties
   - FEATURE: Metabrik: auto tagging of Briks based on Repository, Category and Name
   - FEATURE: Metabrik: optional_modules and optional_binaries Properties.
              Also added brik_has_binary and brik_has_module Commands.
   - new: core::context: get_used Command to return a reference to a used Brik
   - new: brik::search: command Command to search a Brik by existing Commands
   - bugfix: shell::script: allow blank lines and comments
   - bugfix: core::shell: correctly stop a run Command on SIGINT
   - bugfix: Metabrik: return error and not info on bad usage for some brik_has_* Commands
   - bugfix: Metabrik: correctly call brik_fini on core::context exiting

1.10 Tue Oct 27 20:13:36 CET 2015